test/errors/iteration/inconsistent_typing.np
x = 1
l = ["one"]
for x in l:
    print(x)
